[package]
name = "youtube_json"
version = "0.1.0"
authors = ["Asapin <1559761+Asapin@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snafu = "^0"
vec1 = { version = "^1", features = ["serde"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"